[package]
name = "rusterflow"
version = "0.1.0"
authors = ["Jah Markabawi <jmarkaba@asu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
ndarray = "0.14.0"
ndarray-rand = "0.13.0"
#nalgebra = "0.27.1"
